<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Выбор базовой валюты -->
    <ListPreference
        android:key="base_currency"
        android:title="@string/base_currency"
        android:entries="@array/currency_names"
        android:entryValues="@array/currency_codes"
        android:defaultValue="RUB"
        android:summary="%s" />

    <!-- Количество валют на странице -->
    <ListPreference
        android:key="page_size"
        android:title="@string/currency_amount_per_page"
        android:entries="@array/page_size_entries"
        android:entryValues="@array/page_size_values"
        android:defaultValue="5"
        android:summary="%s" />

    <!-- Тёмная тема -->
    <SwitchPreferenceCompat
        android:key="dark_theme"
        android:title="@string/dark_theme"
        android:summary="@string/theme_desc"
        android:defaultValue="false" />


    <ListPreference
        android:key="app_language"
        android:title="@string/pref_language_title"
        android:summary="@string/pref_language_summary"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="ru" />

</PreferenceScreen>