<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorSurface"
    tools:context=".ui.history.HistoryFragment">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/text_history_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_history"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_history_empty"
        app:layout_constraintVertical_chainStyle="packed"/>


    <TextView
        android:id="@+id/text_history_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history_empty"
        android:textColor="?attr/colorOnBackground"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_history_title"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Список истории -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_history_empty"
        app:layout_constraintBottom_toTopOf="@id/button_clear_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_history" />

    <!-- Кнопка очистки -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear_history"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_clear_button"
        android:textAllCaps="false"
        android:insetTop="8dp"
        android:insetBottom="8dp"
        app:backgroundTint="?attr/colorPrimary"
        app:iconTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>